--- a/BretTheBagSecretPage.html
+++ b/BretTheBagSecretPage.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>The Grand Finale — Crosswords Edition</title>
+<title>Secret Page...</title>
 <style>
   :root { --orb-move-scale: 0.035; }
 
