--- a/BretTheBagSecretPage.html
+++ b/BretTheBagSecretPage.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
+<meta name="robots" content="noindex, nofollow" >
 <title>Secret Page...</title>
 <style>
   :root { --orb-move-scale: 0.035; }
