--- a/BretTheBagSecretPage.html
+++ b/BretTheBagSecretPage.html
@@ -3,7 +3,6 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<meta name="robots" content="noindex, nofollow" >
 <title>Secret Page...</title>
 <style>
   :root { --orb-move-scale: 0.035; }
@@ -56,6 +55,36 @@
   .confetti-piece { position: absolute; border-radius: 2px; opacity: 0.65; animation: confettiFall linear infinite; }
   @keyframes confettiFall { 0% { transform: translateY(-10vh) rotate(0deg); } 100% { transform: translateY(110vh) rotate(720deg); } }
 
+  /* Bret Info Section */
+  .info-section {
+    background: rgba(255,255,255,0.08);
+    backdrop-filter: blur(8px);
+    border-radius: 20px;
+    padding: 32px 50px;
+    margin: 50px auto;
+    max-width: 750px;
+    box-shadow: 0 0 30px rgba(255,255,255,0.1);
+    text-align: left;
+  }
+  .info-section h2 {
+    text-align: center;
+    color: #ffccff;
+    text-shadow: 0 0 8px #ff00ff, 0 0 12px #00ffff;
+    margin-bottom: 22px;
+  }
+  .info-list {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    font-size: 1.05rem;
+    color: #e0e0e0;
+    line-height: 1.8;
+  }
+  .info-list li strong {
+    color: #00ffff;
+    text-shadow: 0 0 6px #00ffff;
+  }
+
   /* Crossword buttons */
   .game-section { background: rgba(255,255,255,0.08); backdrop-filter: blur(8px); border-radius: 16px; padding: 24px; margin: 40px auto; max-width: 700px; box-shadow: 0 0 20px rgba(255,255,255,0.1); text-align: center; }
   .game-section h2 { color: #00ffcc; text-shadow: 0 0 8px #00ffff; margin-bottom: 16px; }
@@ -78,7 +107,12 @@
     transform: translateY(-2px) scale(1.05);
   }
 
-  @media(max-width:768px){ .container{padding:28px;} h1{font-size:2.4rem;} .bret-image{width:55%;max-width:220px;} }
+  @media(max-width:768px){
+    .container{padding:28px;}
+    h1{font-size:2.4rem;}
+    .bret-image{width:55%;max-width:220px;}
+    .info-section{padding:22px;}
+  }
 </style>
 </head>
 <body>
@@ -101,6 +135,24 @@
       Bret the Bag on his birthday with a one-of-a-kind signature of the author
     </p>
     <div class="ending-title">Bret the Bag</div>
+  </div>
+
+  <!-- About Bret Section -->
+  <div class="info-section">
+    <h2>About Bret the Bag</h2>
+    <ul class="info-list">
+      <li><strong>Full name:</strong> Bret Bobby Juanito-Hernandez The Bag</li>
+      <li><strong>Born:</strong> Thursday, October 23, 2025</li>
+      <li><strong>Country:</strong> United States</li>
+      <li><strong>Gender:</strong> Male</li>
+      <li><strong>Weight:</strong> 10g</li>
+      <li><strong>Identification:</strong> Plastic Bag</li>
+      <li><strong>Ethnicity:</strong> None</li>
+      <li><strong>Favorite Color:</strong> Purple</li>
+      <li><strong>Favorite Food:</strong> Bananas</li>
+      <li><strong>Favorite Movie:</strong> Toy Story</li>
+      <li><strong>Hobbies:</strong> Adventuring, Reading</li>
+    </ul>
   </div>
 
   <!-- Crossword buttons -->
