--- a/BretTheBagSecretPage.html
+++ b/BretTheBagSecretPage.html
@@ -130,18 +130,18 @@
     <h1>TREASURE FOUND!</h1>
     <p class="main-message">You’ve uncovered the hidden <strong>"Easter Egg"</strong> inside Bret The Bag.</p>
     <p class="main-message">Congratulations — You are <strong>AMAZING!</strong> Well you always were...</p>
-    <img src="Bret_the_Bag.jpg" alt="Bret the Bag" class="bret-image" />
+    <img src="Bret_the_Bag.jpg" alt="Bret The Bag" class="bret-image" />
     <p class="image-caption" style="color:#ffd700;margin-top:10px;font-style:italic;">
-      Bret the Bag on his birthday with a one-of-a-kind signature of the author
+      Bret The Bag on his birthday with a one-of-a-kind signature of the author
     </p>
-    <div class="ending-title">Bret the Bag</div>
+    <div class="ending-title">Bret The Bag</div>
   </div>
 
   <!-- About Bret Section -->
   <div class="info-section">
-    <h2>About Bret the Bag</h2>
+    <h2>About Bret The Bag</h2>
     <ul class="info-list">
-      <li><strong>Full name:</strong> Bret Bobby Juanito-Hernandez The Bag</li>
+      <li><strong>Full name:</strong> Bret Bobby Juanito-Hernandez The-Bag</li>
       <li><strong>Born:</strong> Thursday, October 23, 2025</li>
       <li><strong>Country:</strong> United States</li>
       <li><strong>Gender:</strong> Male</li>
