--- a/BretTheBagSecretPage.html
+++ b/BretTheBagSecretPage.html
@@ -139,19 +139,33 @@
 
   <!-- About Bret Section -->
   <div class="info-section">
-    <h2>About Bret The Bag</h2>
+    <h1>About Bret The Bag</h1>
+    <h2>Bret The Bag Info</h2>
     <ul class="info-list">
       <li><strong>Full name:</strong> Bret Bobby Juanito-Hernandez The-Bag</li>
       <li><strong>Born:</strong> Thursday, October 23, 2025</li>
       <li><strong>Country:</strong> United States</li>
       <li><strong>Gender:</strong> Male</li>
-      <li><strong>Weight:</strong> 10g</li>
+      <li><strong>Weight:</strong> 10 grams</li>
       <li><strong>Identification:</strong> Plastic Bag</li>
       <li><strong>Ethnicity:</strong> None</li>
-      <li><strong>Favorite Color:</strong> Purple</li>
-      <li><strong>Favorite Food:</strong> Bananas</li>
-      <li><strong>Favorite Movie:</strong> Toy Story</li>
-      <li><strong>Hobbies:</strong> Adventuring, Reading</li>
+    </ul>
+    <h2>Favorites</h2>
+    <ul class="info-list">
+      <li><strong>Color:</strong> Purple</li>
+      <li><strong>Food:</strong> Bananas</li>
+      <li><strong>Drink:</strong> Kiwi Lemonade</li>
+      <li><strong>Song:</strong> Stitches</li>
+      <li><strong>Animal:</strong> Giraffe</li>
+      <li><strong>Store:</strong> Target</li>
+      <li><strong>Restaurant:</strong> Alma Tacos</li>
+      <li><strong>Movie:</strong> Toy Story</li>
+      <li><strong>TV Show:</strong> Stranger Things</li>
+      <li><strong>Sport:</strong> Golf</li>
+      <li><strong>Tabletop Game:</strong> Telestrations</li>
+      <li><strong>Video Game:</strong> Indiana Jones and the Great Circle</li>
+      <li><strong>Book:</strong> The Outsiders</li>
+      <li><strong>Hobbies:</strong> Adventuring, Reading, People Watching, Doing Math, Playing Chess, Watching Youtube Videos, Being Happy</li>
     </ul>
   </div>
 
