--- a/BretTheBagSecretPage.html
+++ b/BretTheBagSecretPage.html
@@ -137,37 +137,60 @@
     <div class="ending-title">Bret The Bag</div>
   </div>
 
+    <!-- About Bret Section -->
   <!-- About Bret Section -->
   <div class="info-section">
-    <h1>About Bret The Bag</h1>
-    <h2>Bret The Bag Info</h2>
-    <ul class="info-list">
-      <li><strong>Full name:</strong> Bret Bobby Juanito-Hernandez The-Bag</li>
-      <li><strong>Born:</strong> Thursday, October 23, 2025</li>
-      <li><strong>Country:</strong> United States</li>
-      <li><strong>Gender:</strong> Male</li>
-      <li><strong>Weight:</strong> 10 grams</li>
-      <li><strong>Identification:</strong> Plastic Bag</li>
-      <li><strong>Ethnicity:</strong> None</li>
-    </ul>
-    <h2>Favorites</h2>
-    <ul class="info-list">
-      <li><strong>Color:</strong> Purple</li>
-      <li><strong>Food:</strong> Bananas</li>
-      <li><strong>Drink:</strong> Kiwi Lemonade</li>
-      <li><strong>Song:</strong> Stitches</li>
-      <li><strong>Animal:</strong> Giraffe</li>
-      <li><strong>Store:</strong> Target</li>
-      <li><strong>Restaurant:</strong> Alma Tacos</li>
-      <li><strong>Movie:</strong> Toy Story</li>
-      <li><strong>TV Show:</strong> Stranger Things</li>
-      <li><strong>Sport:</strong> Golf</li>
-      <li><strong>Tabletop Game:</strong> Telestrations</li>
-      <li><strong>Video Game:</strong> Indiana Jones and the Great Circle</li>
-      <li><strong>Book:</strong> The Outsiders</li>
-      <li><strong>Hobbies:</strong> Adventuring, Reading, People Watching, Doing Math, Playing Chess, Watching Youtube Videos, Being Happy</li>
-    </ul>
+    <h1 style="text-align:center; color:#ffd700; text-shadow:0 0 12px #ff00ff, 0 0 20px #00ffff; margin-bottom:10px;">About Bret The Bag</h1>
+    <p style="text-align:center; color:#dcdcdc; max-width:600px; margin:0 auto 30px; font-size:1.05rem;">
+      Bret The Bag is more than just a plastic bag — he’s a symbol of curiosity, adventure, and pure joy. Here’s a closer look at the legend himself:
+    </p>
+
+    <div style="display:flex; flex-wrap:wrap; gap:40px; justify-content:center;">
+
+      <!-- Profile Info -->
+      <div style="flex:1 1 300px; min-width:280px;">
+        <h2 style="text-align:center; color:#ffccff; text-shadow:0 0 8px #ff00ff, 0 0 12px #00ffff; margin-bottom:16px;">Basic Info</h2>
+        <ul class="info-list">
+          <li><strong>Full Name:</strong> Bret Bobby Juanito-Hernandez The-Bag</li>
+          <li><strong>Born:</strong> Thursday, October 23, 2025</li>
+          <li><strong>Country:</strong> United States</li>
+          <li><strong>Gender:</strong> Male</li>
+          <li><strong>Weight:</strong> 10 grams</li>
+          <li><strong>Identification:</strong> Plastic Bag</li>
+          <li><strong>Ethnicity:</strong> None</li>
+        </ul>
+      </div>
+
+      <!-- Favorites -->
+      <div style="flex:1 1 300px; min-width:280px;">
+        <h2 style="text-align:center; color:#ffccff; text-shadow:0 0 8px #ff00ff, 0 0 12px #00ffff; margin-bottom:16px;">Favorites</h2>
+        <ul class="info-list">
+          <li><strong>Color:</strong> Purple</li>
+          <li><strong>Food:</strong> Bananas</li>
+          <li><strong>Drink:</strong> Kiwi Lemonade</li>
+          <li><strong>Song:</strong> Stitches</li>
+          <li><strong>Animal:</strong> Giraffe</li>
+          <li><strong>Store:</strong> Target</li>
+          <li><strong>Restaurant:</strong> Alma Tacos</li>
+          <li><strong>Movie:</strong> Toy Story</li>
+          <li><strong>TV Show:</strong> Stranger Things</li>
+          <li><strong>Sport:</strong> Golf</li>
+          <li><strong>Tabletop Game:</strong> Telestrations</li>
+          <li><strong>Video Game:</strong> Indiana Jones and the Great Circle</li>
+          <li><strong>Book:</strong> The Outsiders</li>
+        </ul>
+      </div>
+    </div>
+
+    <!-- Hobbies Section -->
+    <div style="margin-top:40px;">
+      <h2 style="text-align:center; color:#ffccff; text-shadow:0 0 8px #ff00ff, 0 0 12px #00ffff; margin-bottom:16px;">Hobbies</h2>
+      <p style="color:#e0e0e0; line-height:1.8; text-align:center; max-width:700px; margin:0 auto;">
+        Adventuring, reading, people-watching, doing math, playing chess, watching YouTube videos, and simply being happy.
+      </p>
+    </div>
   </div>
+
 
   <!-- Crossword buttons -->
   <div class="game-section">
