--- a/BretTheBagSecretPage.html
+++ b/BretTheBagSecretPage.html
@@ -137,19 +137,16 @@
     <div class="ending-title">Bret The Bag</div>
   </div>
 
-    <!-- About Bret Section -->
   <!-- About Bret Section -->
   <div class="info-section">
     <h1 style="text-align:center; color:#ffd700; text-shadow:0 0 12px #ff00ff, 0 0 20px #00ffff; margin-bottom:10px;">About Bret The Bag</h1>
     <p style="text-align:center; color:#dcdcdc; max-width:600px; margin:0 auto 30px; font-size:1.05rem;">
-      Bret The Bag is more than just a plastic bag — he’s a symbol of curiosity, adventure, and pure joy. Here’s a closer look at the legend himself:
+      Bret The Bag is more than just a plastic bag — he’s a symbol of curiosity, adventure, and joy. Here’s a closer look at the legend himself:
     </p>
 
     <div style="display:flex; flex-wrap:wrap; gap:40px; justify-content:center;">
-
-      <!-- Profile Info -->
       <div style="flex:1 1 300px; min-width:280px;">
-        <h2 style="text-align:center; color:#ffccff; text-shadow:0 0 8px #ff00ff, 0 0 12px #00ffff; margin-bottom:16px;">Basic Info</h2>
+        <h2>Basic Info</h2>
         <ul class="info-list">
           <li><strong>Full Name:</strong> Bret Bobby Juanito-Hernandez The-Bag</li>
           <li><strong>Born:</strong> Thursday, October 23, 2025</li>
@@ -161,9 +158,8 @@
         </ul>
       </div>
 
-      <!-- Favorites -->
       <div style="flex:1 1 300px; min-width:280px;">
-        <h2 style="text-align:center; color:#ffccff; text-shadow:0 0 8px #ff00ff, 0 0 12px #00ffff; margin-bottom:16px;">Favorites</h2>
+        <h2>Favorites</h2>
         <ul class="info-list">
           <li><strong>Color:</strong> Purple</li>
           <li><strong>Food:</strong> Bananas</li>
@@ -182,19 +178,17 @@
       </div>
     </div>
 
-    <!-- Hobbies Section -->
     <div style="margin-top:40px;">
-      <h2 style="text-align:center; color:#ffccff; text-shadow:0 0 8px #ff00ff, 0 0 12px #00ffff; margin-bottom:16px;">Hobbies</h2>
+      <h2>Hobbies</h2>
       <p style="color:#e0e0e0; line-height:1.8; text-align:center; max-width:700px; margin:0 auto;">
-        Adventuring, reading, people-watching, doing math, playing chess, watching YouTube videos, and simply being happy.
+        <b>Bret The Bag loves:</b>  Adventuring, Reading, People-Watching, Doing Math, Playing Chess, Watching YouTube Videos, and simply being happy.
       </p>
     </div>
   </div>
 
-
   <!-- Crossword buttons -->
   <div class="game-section">
-    <h2>Play one of my Crosswords:</h2>
+    <h2>Play a Crossword:</h2>
     <div class="game-buttons">
       <button onclick="window.open('https://puzzleme.amuselabs.com/pmm/crossword?id=1b01621f&set=b9ac63f56e004ed40ee002a26547876ebad692da356cf60a886e1ba656cbaae2','_blank')">Crossword 1</button>
       <button onclick="window.open('https://puzzleme.amuselabs.com/pmm/crossword?id=01ad2ff2&set=b9ac63f56e004ed40ee002a26547876ebad692da356cf60a886e1ba656cbaae2','_blank')">Crossword 2</button>
