--- a/BretTheBagSecretPage.html
+++ b/BretTheBagSecretPage.html
@@ -158,7 +158,7 @@
         </ul>
       </div>
 
-      <div style="flex:1 1 300px; min-width:280px;">
+      <div style="margin-top:40px;">
         <h2>Favorites</h2>
         <ul class="info-list">
           <li><strong>Color:</strong> Purple</li>
